--- a/jobstudy/pom.xml
+++ b/jobstudy/pom.xml
@@ -35,6 +35,7 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+<!--        阿里巴巴json库-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -46,10 +47,30 @@
             <version>2.13.5</version>
             <scope>compile</scope>
         </dependency>
+<!--        单测-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!--okhttp3-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+
+<!--        retrofit库-->
+        <dependency>
+            <groupId>com.github.lianjiatech</groupId>
+            <artifactId>retrofit-spring-boot-starter</artifactId>
+            <version>2.0.2</version>
         </dependency>
     </dependencies>
 
